<resources>
    <string name="app_name">My Applicationp3</string>
    <string name="lets_buzz_into_productivity_with_beebusy_timer">Lets BUZZ into productivity with beebusy timer</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="login">Login</string>
    <string name="title_activity_landing">landing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="_00_00">00:00</string>
    <string name="todo">TODO</string>
    <string name="lets_buzz_into_productivit_ywith_beebusy_timer">Lets buzz into productivit ywith beebusy timer</string>
    <string name="todo1">TODO</string>
    <string name="proceed_to_timer">Proceed to Timer</string>
    <string name="important_to_note_the_main_objective_of_the_bee_busy_pomodoro_feature_is_to_ensure_the_user_remains_productive_and_does_not_procastinate_if_the_user_decides_to_leave_the_pomodoro_app_it_will_revert_back_to_00_00_and_the_user_will_have_to_restart_the_timer_the_user_can_choose_between_a_25_minute_timer_a_30_minute_timer_and_a_45_minute_timer">Important to note - The Main objective of the bee Busy pomodoro feature is to ensure the user remains productive and does not procastinate if the user decides to leave the pomodoro app , it will revert back to 00:00 and the user will have to restart the timer , the user can choose between a 25 minute timer , a 30 minute timer and a 45 minute timer</string>
    <string name="important_to_note_the_main_objective_of_the_bee_busy_pomodoro_feature_is_to_ensure_the_user_remains_productive_and_does_not_procrastinate_if_the_user_decides_to_leave_the_pomodoro_app_it_will_revert_back_to_00_00_and_the_user_will_have_to_restart_the_timer_the_user_can_choose_between_a_25_minute_timer_a_30_minute_timer_and_a_45_minute_timer">important to note the main objective of the bee busy pomodoro feature is to ensure the user remains productive and does not procrastinate. if the user decides to leave the pomodoro app, it will revert back to 00:00 and the user will have to restart the timer. the user can choose between a 25 minute timer, a 30 minute timer, and a 45 minute timer</string>
    <string name="save_data">Save data</string>
    <string name="enter_a_task_description">Enter a task description</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="enter_a_task_name">Enter a Task Name</string>
    <string name="end_date">End Date</string>
</resources>